[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "bleach>=6.2.0",
    "faiss-cpu>=1.12.0",
    "fastparquet>=2024.11.0",
    "feedparser>=6.0.11",
    "google-api-python-client>=2.165.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "modal>=1.1.1",
    "orjson>=3.11.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.33",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "sentence-transformers>=5.1.2",
]
